--- a/src/client/src/exercise_directives/match/preview.html
+++ b/src/client/src/exercise_directives/match/preview.html
@@ -1,10 +1,10 @@
-<div class="help" translate>choose part to match current phrase</div>
+<div class="help" translate>Match the correct option</div>
+<table class="table">
+<tr ng-repeat="item in exercise.items">
+<td>{{item.part1}}</td>
+<td><button ng-if="selectedItems[$index]">{{selectedItems[$index].value}}</button> </td>
+</tr>
+</table>
 <div>
-<span  ng-repeat="item in exercise.items">
-<span ng-if="item.type=='txt'">{{item.val}}</span>
-<select ng-change="checkCorrect(item, exercise.id)" ng-model="item.user_selection" ng-if="item.type=='select'">
-<option></option>
-<option ng-repeat="option in item.options">{{option.val}}</option>
-</select>
-</span>
+<button ng-click="checkCorrect($index,item.part2,exercise.id)" ng-repeat="item in exercise.items">{{item.part2}}</button>
 </div>
