--- a/src/client/src/exercise_directives/mix/edit.html
+++ b/src/client/src/exercise_directives/mix/edit.html
@@ -1,12 +1,4 @@
-<div class="help" translate>Let the student match a phrase parts to each other</div>
-<div class="row">
-<div  class="col-md-4" ng-repeat="item in exercise.items">
-<input ng-if="item.type=='txt'" placeholder="text part" ng-model="item.val">
-<div ng-if="item.type=='select'">
-<div ng-repeat="o in item.options">
-    <input size="15" placeholder="option"  ng-model="o.val">
-    <input title="correct" type="checkbox" ng-model="o.correct">
-</div>
-</div>
-</div>
+<div class="help" translate>Phrase words will be mixed and the student will have to put them in the right order</div>
+<div><input ng-change="setWords()" ng-model="exercise.text" class="form-control" placeholder="phrase">
+<input ng-model="exercise.distraction" class="form-control" placeholder="distraction - (optional)">
 </div>
