--- a/src/client/src/exercise_directives/question/edit.html
+++ b/src/client/src/exercise_directives/question/edit.html
@@ -1,12 +1,6 @@
-<div class="help" translate>Let the student match a phrase parts to each other</div>
-<div class="row">
-<div  class="col-md-4" ng-repeat="item in exercise.items">
-<input ng-if="item.type=='txt'" placeholder="text part" ng-model="item.val">
-<div ng-if="item.type=='select'">
-<div ng-repeat="o in item.options">
-    <input size="15" placeholder="option"  ng-model="o.val">
-    <input title="correct" type="checkbox" ng-model="o.correct">
-</div>
-</div>
-</div>
+<div class="help" translate>A question with a few possible answers</div>
+<div ><span translate>question</span> :<input placeholder="question" ng-model="exercise.question"></div>
+<div ng-repeat="a in exercise.answers">
+  answer:<input placeholder="answer" ng-model="a.answer">
+  correct:<input type="checkbox" ng-model="a.correct">
 </div>
