--- a/src/client/src/exercise_directives/video/preview.html
+++ b/src/client/src/exercise_directives/video/preview.html
@@ -1,10 +1,3 @@
-<div class="help" translate>choose part to match current phrase</div>
-<div>
-<span  ng-repeat="item in exercise.items">
-<span ng-if="item.type=='txt'">{{item.val}}</span>
-<select ng-change="checkCorrect(item, exercise.id)" ng-model="item.user_selection" ng-if="item.type=='select'">
-<option></option>
-<option ng-repeat="option in item.options">{{option.val}}</option>
-</select>
-</span>
-</div>
+<youtube-video video-url="exercise.videoUrl"></youtube-video>
+<div>{{videoTime}}</div>
+<button ng-click="videoTime = getTime()">getTime</button>
