--- a/src/client/src/exercise_directives/vocabulary/edit.html
+++ b/src/client/src/exercise_directives/vocabulary/edit.html
@@ -1,12 +1,16 @@
-<div class="help" translate>Let the student match a phrase parts to each other</div>
-<div class="row">
-<div  class="col-md-4" ng-repeat="item in exercise.items">
-<input ng-if="item.type=='txt'" placeholder="text part" ng-model="item.val">
-<div ng-if="item.type=='select'">
-<div ng-repeat="o in item.options">
-    <input size="15" placeholder="option"  ng-model="o.val">
-    <input title="correct" type="checkbox" ng-model="o.correct">
-</div>
-</div>
-</div>
-</div>
+<div class="help" translate>A vocabulary, a set of words and meanings/translation </div>
+<table class="table">
+  <thead>
+  <tr>
+    <td translate> Term </td>
+    <td translate>Translation </td>
+  </tr>
+  </thead>
+  <tbody>
+  <tr ng-repeat="item in exercise.items" >
+    <td><input ng-model="item.term" placeholder="term"></td>
+    <td><input ng-model="item.translation" placeholder="translation"></td>
+  </tr>
+  </tbody>
+</table>
+<div><button ng-click="addItem()">Add</button></div>
