changing format of pages

--- a/src/home/web/index.html
+++ b/src/home/web/index.html
@@ -1,4 +1,4 @@
-<html lang="en" ng-app="ate.tfe">
+<html lang="en" ng-app="sllp">
 <head>
   {% include 'styles.html' %}
   <meta name="viewport" content="initial-scale=1"/>
@@ -12,6 +12,5 @@
 
 </md-content>
 {% include 'scripts.html' %}
-
 </body>
 </html>
