--- a/src/home/web/scripts.html
+++ b/src/home/web/scripts.html
@@ -13,6 +13,11 @@
 
 
 
+<script src="/static/src/profile/web/profile_module.js"></script>
+<script src="/static/src/profile/web/profile_service.js"></script>
+<script src="/static/src/profile/web/profile_controller.js"></script>
+
+
 <script src="/static/src/home/web/home_module.js"></script>
 <script src="/static/src/home/web/auth/login.js"></script>
 <script src="/static/src/home/web/auth/auth_service.js"></script>
