--- a/src/home/web/home/home_view.html
+++ b/src/home/web/home/home_view.html
@@ -1,60 +1,21 @@
 <section layout="row">
-  <md-sidenav class="md-sidenav-left md-whiteframe-z2"
-              md-component-id="methods"
-              md-is-locked-open="$mdMedia('min-width: 1024px')"
-              style="height: 93vh;">
-    <md-content>
-      <md-toolbar md-scroll-shrink class="md-theme-indigo md-accent">
-        <div class="md-toolbar-tools">
-          <h3>Methods</h3>
-          <span flex></span>
-          <md-button class="md-icon-button"
-                     style="font-size: 24px;"
-                     ng-click="home.collapseToggle()">
-            <i ng-if="!home.collapseMethods" class="mdi mdi-plus"></i>
-            <i ng-if="home.collapseMethods" class="mdi mdi-minus"></i>
-            <md-tooltip>
-              Expand/collapse methods
-            </md-tooltip>
-          </md-button>
+  <md-card flex="25">
+    <md-card-content>
+      <md-list>
+      <md-subheader class="md-no-sticky">3 line item</md-subheader>
+      <md-list-item class="md-3-line" ng-repeat="item in home.lessons" ng-click="home.selectLessen($index)">
+        <div class="md-list-item-text">
+          <h3>{{ item.name }}</h3>
+          <h4>{{ item.author }}</h4>
+          <p>{{ item.notes }}</p>
         </div>
-      </md-toolbar>
-    </md-content>
-    <md-content flex>
-      <ate-tfe-class select="home.selectMethod(method)" collapse="{{ home.collapseMethods }}"></ate-tfe-class>
-    </md-content>
-  </md-sidenav>
-  <md-content flex>
-    <ate-tfe-method-params selected="home.selectedMethod"
-                           on-execute="self.execute(executionInfo)">
-    </ate-tfe-method-params>
-    <md-content ng-show="home.executionResults.length > 0"
-                style="padding: 5px; padding-bottom: 0; margin-bottom: 0;"
-                layout="column">
-      <div layout="row" layout-align="space-between center">
-        <md-input-container flex>
-          <label>Search results</label>
-          <input ng-model="home.results_query">
-        </md-input-container>
-        <span></span>
-        <md-button style="font-size: 24px;"
-                   class="md-warn"
-                   ng-click="home.cleanHistory()">
-          <md-icon class="mdi mdi-delete-variant"></md-icon>
-          <md-tooltip>
-            Clear <results></results>
-          </md-tooltip>
-        </md-button>
-      </div>
-    </md-content>
-    <md-content flex
-                ng-if="home.executionResults.length > 0">
-      <div layout="column">
-        <ate-tfe-result result="result"
-                        index="{{ home.executionResults.length - $index }}"
-                        ng-repeat="result in home.executionResults | filter : home.results_query | orderBy : '-time'">
-        </ate-tfe-result>
-      </div>
-    </md-content>
-  </md-content>
+      </md-list-item>
+      </md-list>
+    </md-card-content>
+  </md-card>
+  <md-card flex>
+    <md-card-content>
+      <h1>{{home.selectedLesson.name}}</h1>
+    </md-card-content>
+  </md-card>
 </section>
