starting with material design

--- a/src/home/web/menu/menu.html
+++ b/src/home/web/menu/menu.html
@@ -13,6 +13,7 @@
       <a href='#/lesson' class="md-button" aria-label="Lesson">Lesson</a>
       <a ng-if="menu.hasPermission('practice')" href='#/practice' class="md-button" aria-label="Practice">Practice</a>
       <a href='#/profile' class="md-button" aria-label="Profile">Profile</a>
+      <a href='#/editor' class="md-button" aria-label="Editor">Editor</a>
       <a href="#" ng-click="menu.logout()" class="md-button" aria-label="Logout">Logout</a>
 
       <span flex></span>
