--- a/src/home/web/scripts.html
+++ b/src/home/web/scripts.html
@@ -1,8 +1,3 @@
-<script type="text/javascript">
-  var web_socket_url = '{{ web_socket_url }}';
-
-</script>
-
 <script src="/static/web_res/bower_components/angular/angular.min.js"></script>
 <script src="/static/web_res/bower_components/angular-cookies/angular-cookies.min.js"></script>
 <script src="/static/web_res/bower_components/angular-route/angular-route.min.js"></script>
@@ -11,11 +6,28 @@
 <script src="/static/web_res/bower_components/angular-material/angular-material.min.js"></script>
 
 
-
-
 <script src="/static/src/profile/web/profile_module.js"></script>
 <script src="/static/src/profile/web/profile_service.js"></script>
 <script src="/static/src/profile/web/profile_controller.js"></script>
+<script src="/static/src/profile/web/routes.js"></script>
+
+
+<script src="/static/src/editor/web/editor_module.js"></script>
+<script src="/static/src/editor/web/editor_service.js"></script>
+<script src="/static/src/editor/web/editor_controller.js"></script>
+<script src="/static/src/editor/web/routes.js"></script>
+
+<script src="/static/src/practice/web/practice_module.js"></script>
+<script src="/static/src/practice/web/practice_service.js"></script>
+<script src="/static/src/practice/web/practice_controller.js"></script>
+<script src="/static/src/practice/web/routes.js"></script>
+
+
+<script src="/static/src/lesson/web/lesson_module.js"></script>
+<script src="/static/src/lesson/web/lesson_service.js"></script>
+<script src="/static/src/lesson/web/lesson_controller.js"></script>
+<script src="/static/src/lesson/web/routes.js"></script>
+
 
 
 <script src="/static/src/home/web/home_module.js"></script>
