--- a/src/editor/web/list/list.html
+++ b/src/editor/web/list/list.html
@@ -1,2 +1,23 @@
-<h1>Editor</h1>
-<a href="#/editor/add">Add</a>
+<section layout="row">
+  <md-card flex="25">
+    <md-card-content>
+      <md-list>
+        <md-header>Lessons I have created</md-header>
+        
+        <md-button>Add Lesson</md-button>
+        <md-input-container>
+          <label>Search</label>
+          <input ng-model="list.q">
+        </md-input-container>
+        <md-list-item ng-repeat="l in list.lessons| filter:lesson.q">
+          <a href="#/editor/add">{{l.name}}</a>
+        </md-list-item>
+      </md-list>
+    </md-card-content>
+  </md-card>
+  <md-card flex>
+    <md-card-content>
+      <h1>Preview Lesson</h1>
+    </md-card-content>
+  </md-card>
+</section>
