--- a/src/practice/web/practice.html
+++ b/src/practice/web/practice.html
@@ -1,1 +1,18 @@
-<h1>Practice</h1>
+<section layout="row">
+  <md-card flex="25">
+    <md-card-content>
+      <md-list>
+        <md-header>Exercises List</md-header>
+        <md-list-item ng-repeat="item in practice.exercises| orderBy:item.weight">
+          <md-button ng-click="practice.selectExercise($index)">{{ item.name }}</md-button>
+        </md-list-item>
+      </md-list>
+    </md-card-content>
+  </md-card>
+  <md-card flex>
+    <md-card-content>
+      <h1>Practice Area</h1>
+      {{practice.selectedExercise.name}}
+    </md-card-content>
+  </md-card>
+</section>
