--- a/src/profile/web/profile.html
+++ b/src/profile/web/profile.html
@@ -1,1 +1,20 @@
-<h1>Profile</h1>
+<section layout="row">
+  <md-card flex="40">
+    <md-card-content>
+      <md-input-container>
+        <label>Name</label>
+        <input ng-model="profile.name">
+      </md-input-container>
+      <md-input-container>
+        <label>Learning Language</label>
+        <input ng-model="profile.learning">
+      </md-input-container>
+    </md-card-content>
+  </md-card>
+  <md-card flex>
+    <md-card-content>
+      <h1>Learning statistics, charts etc...</h1>
+
+    </md-card-content>
+  </md-card>
+</section>
