Design of editor

--- a/src/editor/web/edit/edit.html
+++ b/src/editor/web/edit/edit.html
@@ -23,42 +23,43 @@
       <md-list>
         <md-header>Exercises</md-header>
         <md-list-item ng-repeat="item in edit.exercises| orderBy:item.weight">
-
-          <md-button ng-disabled="$last" ng-click="edit.moveDown($index)" class="md-icon-button" aria-label="Move Down">
+          <md-button class="md-icon-button md-fab md-mini" style="font-size:24px;"
+                     ng-click="edit.deleteExercise($index)"
+                     aria-label="Delete">
+            <md-icon class="mdi mdi-delete" ></md-icon>
+          </md-button>
+          <md-button ng-disabled="$last" ng-click="edit.moveDown($index)"
+                     style="font-size:24px;"
+                     class="md-icon-button md-fab md-mini md-primary md-hue-3" aria-label="Move Down">
             <md-icon class="mdi mdi-chevron-down"></md-icon>
           </md-button>
-          <md-button ng-disabled="$first" ng-click="edit.moveUp($index)" class="md-icon-button"
-                     aria-label="Move Up">
+          <md-button ng-disabled="$first" ng-click="edit.moveUp($index)"
+                     class="md-icon-button md-fab md-mini md-primary  md-hue-3"
+                     style="font-size:24px;"
+                     aria-label="Move Up" >
             <md-icon class="mdi mdi-chevron-up"></md-icon>
           </md-button>
           <!--
-        <md-icon class="mdi mdi-chevron-up"></md-icon>
-        <md-icon class="mdi mdi-chevron-up"></md-icon>
-        -->
-          <md-button ng-click="edit.selectExercise($index)">{{ item.name }}</md-button>
+          <md-button  class="md-icon-button  md-mini md-primary  md-hue-3" style="font-size:24px;" aria-label="Move Up">
+
+          </md-button>
+          -->
+
+
+          <md-button ng-click="edit.selectExercise($index)">
+             <md-icon  class="mdi" style="font-size:24px;" ng-class="edit.getExerciseClass(item)" ></md-icon>
+            {{ item.name }}
+          </md-button>
         </md-list-item>
       </md-list>
       <h5>Add Exercise</h5>
-      <section layout="row" >
+      <section layout="row">
         <md-button ng-repeat="e in edit.exerciseTypes" ng-click="edit.addExercise(e)"
-                   class="md-icon-button md-fab md-mini md-primary" style="font-size:24" >
-          <md-icon class="mdi" ng-class="edit.getClass(e)" aria-label="{{e.typeName}}"></md-icon>
-          <md-tooltip >Add {{e.typeName}} </md-tooltip>
+                   class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;">
+          <md-icon class="mdi" ng-class="edit.getClass(e)" aria-label="{{e.etype}}"></md-icon>
+          <md-tooltip>Add {{e.etype}}</md-tooltip>
         </md-button>
       </section>
-      <!--
-      <md-bottom-sheet class="md-grid">
-        <md-list>
-          <md-list-item ng-repeat="e in edit.exerciseTypes">
-            <md-button class="md-grid-item-content" ng-click="listItemClick($index)">
-              <md-icon class="mdi mdi-chevron-down" ></md-icon>
-              <div class="md-grid-text"> {{ e.typeName }}</div>
-            </md-button>
-          </md-list-item>
-        </md-list>
-      </md-bottom-sheet>
-      -->
-
     </md-card-content>
   </md-card>
   <md-card flex="35">
