--- a/src/home/web/scripts.html
+++ b/src/home/web/scripts.html
@@ -6,6 +6,13 @@
 <script src="/static/web_res/bower_components/angular-material/angular-material.min.js"></script>
 
 
+
+
+<script src="/static/src/exercise/web/exercise_module.js"></script>
+<script src="/static/src/exercise/web/vocabulary/edit.js"></script>
+<script src="/static/src/exercise/web/vocabulary/preview.js"></script>
+
+
 <script src="/static/src/profile/web/profile_module.js"></script>
 <script src="/static/src/profile/web/profile_service.js"></script>
 <script src="/static/src/profile/web/profile_controller.js"></script>
