--- a/src/editor/web/edit/edit.html
+++ b/src/editor/web/edit/edit.html
@@ -39,12 +39,6 @@
                      aria-label="Move Up" >
             <md-icon class="mdi mdi-chevron-up"></md-icon>
           </md-button>
-          <!--
-          <md-button  class="md-icon-button  md-mini md-primary  md-hue-3" style="font-size:24px;" aria-label="Move Up">
-
-          </md-button>
-          -->
-
           <md-button ng-click="edit.selectExercise($index)">
              <md-icon  class="mdi" style="font-size:24px;" ng-class="edit.getExerciseClass(item)" ></md-icon>
             {{ item.name }}
@@ -56,7 +50,6 @@
         <md-button ng-repeat="e in edit.exerciseTypes" ng-click="edit.addExercise(e)"
                    class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;">
           <md-icon class="mdi" ng-class="edit.getClass(e)" aria-label="{{e.etype}}"></md-icon>
-          <md-tooltip>Add {{e.etype}} </md-tooltip>
         </md-button>
       </section>
     </md-card-content>
@@ -65,6 +58,9 @@
     <md-card-content>
       <h1>Edit Area</h1>
       {{edit.selectedExercise.name}}
+      <sl-edit-vocabulary exercise="edit.selectedExercise"></sl-edit-vocabulary>
+
+
     </md-card-content>
   </md-card>
   <md-card flex="35">
