starting with material design

--- a/src/editor/web/edit/edit.html
+++ b/src/editor/web/edit/edit.html
@@ -66,6 +66,7 @@
   <md-card flex="35">
     <md-card-content>
       <h1>Preview Area</h1>
+      <sl-preview-vocabulary exercise="edit.selectedExercise"></sl-preview-vocabulary>
     </md-card-content>
   </md-card>
 </section>
