--- a/src/exercise/web/vocabulary/edit.html
+++ b/src/exercise/web/vocabulary/edit.html
@@ -1,4 +1,4 @@
-<div class="help" translate>A vocabulary, a set of words and meanings/translation</div>
+<div class="help" >A vocabulary, a set of words and meanings/translation</div>
 
 <div layout="row" ng-repeat="item in exercise.items">
   <md-input-container flex>
