starting with material design

--- a/src/exercise/web/vocabulary/edit.html
+++ b/src/exercise/web/vocabulary/edit.html
@@ -1,4 +1,17 @@
-<div class="help" >A vocabulary, a set of words and meanings/translation</div>
+
+<section layout="row">
+  <md-button class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;"
+             aria-label="Help">
+    <md-icon class="mdi mdi-help-circle">
+
+    </md-icon>
+    <md-tooltip>
+      A vocabulary, a set of words and meanings/translation
+    </md-tooltip>
+  </md-button>
+  <h4 flex>Vocabulary</h4>
+</section>
+
 
 <div layout="row" ng-repeat="item in exercise.items">
   <md-input-container flex>
