--- a/src/home/web/styles.html
+++ b/src/home/web/styles.html
@@ -4,3 +4,4 @@
 <link media="all" rel="stylesheet" type="text/css"
       href="/static/web_res/bower_components/mdi/css/materialdesignicons.min.css" />
 
+<link rel="stylesheet" href="/static/src/exercise/web/vocabulary/styles.css">
