--- a/src/exercise/web/vocabulary/preview.html
+++ b/src/exercise/web/vocabulary/preview.html
@@ -1,8 +1,12 @@
 <div class="help">match term with translation</div>
 <div layout="column">
-  <div flex ng-repeat="item in exercise.items" >
-    <span>{{item.term}}</span>
-    <md-button>{{item.translation}}</md-button>
+  <div flex ng-repeat="item in exercise.items" layout="row">
+    <md-whiteframe flex="50" class="md-whiteframe-z1" layout layout-align="center center">
+      <span class="vocabulary-preview-term">{{item.term}}</span>
+    </md-whiteframe>
+    <md-whiteframe flex="50" class="md-whiteframe-z1" layout layout-align="center center">
+      <span class="vocabulary-preview-trans">{{item.translation}}</span>
+    </md-whiteframe>
   </div>
 </div>
 
