--- a/src/exercise/web/question/preview.html
+++ b/src/exercise/web/question/preview.html
@@ -1,7 +1,9 @@
-<div>{{exercise.question}}</div>
-<div ng-repeat="a in exercise.answers">
+<section layout="row">
+  <div flex>{{exercise.question}}</div>
+  <div ng-repeat="a in exercise.answers">
   <label>
     <input type="checkbox" value="">
     {{a.answer}}
   </label>
 </div>
+</section>
