--- a/src/home/web/scripts.html
+++ b/src/home/web/scripts.html
@@ -9,8 +9,16 @@
 
 
 <script src="/static/src/exercise/web/exercise_module.js"></script>
+
 <script src="/static/src/exercise/web/vocabulary/edit.js"></script>
 <script src="/static/src/exercise/web/vocabulary/preview.js"></script>
+
+<script src="/static/src/exercise/web/text/edit.js"></script>
+<script src="/static/src/exercise/web/text/preview.js"></script>
+
+<script src="/static/src/exercise/web/question/edit.js"></script>
+<script src="/static/src/exercise/web/question/preview.js"></script>
+
 
 
 <script src="/static/src/profile/web/profile_module.js"></script>
