--- a/src/editor/web/edit/edit.html
+++ b/src/editor/web/edit/edit.html
@@ -61,6 +61,7 @@
       <sl-edit-vocabulary exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='vocabulary'"></sl-edit-vocabulary>
       <sl-edit-text exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='text'"></sl-edit-text>
       <sl-edit-question exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='question'"></sl-edit-question>
+      <sl-edit-mix exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='mix'"></sl-edit-mix>
 
 
     </md-card-content>
@@ -71,6 +72,7 @@
       <sl-preview-vocabulary exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='vocabulary'"></sl-preview-vocabulary>
       <sl-preview-text exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='text'"></sl-preview-text>
       <sl-preview-question exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='question'"></sl-preview-question>
+      <sl-preview-mix exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='mix'"></sl-preview-mix>
     </md-card-content>
   </md-card>
 </section>
