--- a/src/exercise/web/mix/preview.html
+++ b/src/exercise/web/mix/preview.html
@@ -1,8 +1,8 @@
-  <div translate class="help">Put the words in the correct order</div>
+<div translate class="help">Put the words in the correct order</div>
 
-<div class="answer">
-  <button ng-click="moveBack($index)" ng-repeat="a in exercise.answerWords track by $index">{{a}}</button>
+<div class="answer" >
+  <span flex ng-click="moveBack($index)" ng-repeat="a in answerWords track by $index">{{a}}</span>
 </div>
-<div class="words">
-  <button ng-click="moveAnswer($index)" ng-repeat="a in exercise.words track by $index">{{a}}</button>
+<div class="words" >
+  <span flex ng-click="moveAnswer($index)" ng-repeat="a in exercise.words track by $index">{{a}}</span>
 </div>
