Complete editor html

--- a/src/editor/web/edit/edit.html
+++ b/src/editor/web/edit/edit.html
@@ -62,6 +62,7 @@
       <sl-edit-text exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='text'"></sl-edit-text>
       <sl-edit-question exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='question'"></sl-edit-question>
       <sl-edit-mix exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='mix'"></sl-edit-mix>
+      <sl-edit-complete exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='complete'"></sl-edit-complete>
 
 
     </md-card-content>
@@ -73,6 +74,7 @@
       <sl-preview-text exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='text'"></sl-preview-text>
       <sl-preview-question exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='question'"></sl-preview-question>
       <sl-preview-mix exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='mix'"></sl-preview-mix>
+      <sl-preview-complete exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='complete'"></sl-preview-complete>
     </md-card-content>
   </md-card>
 </section>
