--- a/src/home/web/scripts.html
+++ b/src/home/web/scripts.html
@@ -22,6 +22,9 @@
 <script src="/static/src/exercise/web/mix/edit.js"></script>
 <script src="/static/src/exercise/web/mix/preview.js"></script>
 
+<script src="/static/src/exercise/web/complete/edit.js"></script>
+<script src="/static/src/exercise/web/complete/preview.js"></script>
+
 
 
 <script src="/static/src/profile/web/profile_module.js"></script>
