--- a/src/exercise/web/complete/edit.html
+++ b/src/exercise/web/complete/edit.html
@@ -1,12 +1,34 @@
-<div class="help" translate>Let the student match a phrase parts to each other</div>
-<div class="row">
-<div  class="col-md-4" ng-repeat="item in exercise.items">
-<input ng-if="item.type=='txt'" placeholder="text part" ng-model="item.val">
-<div ng-if="item.type=='select'">
-<div ng-repeat="o in item.options">
-    <input size="15" placeholder="option"  ng-model="o.val">
-    <input title="correct" type="checkbox" ng-model="o.correct">
-</div>
-</div>
-</div>
-</div>
+<section layout="row">
+  <md-button class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;"
+             aria-label="Help">
+    <md-icon class="mdi mdi-help-circle">
+    </md-icon>
+    <md-tooltip>
+      Complete a phrase using a selection of options.
+    </md-tooltip>
+  </md-button>
+  <h4 flex>Complete</h4>
+</section>
+
+<section layout="row">
+  <div flex ng-repeat="item in exercise.items">
+    <md-input-container ng-if="item.type=='txt'">
+      <label>Text</label>
+      <input ng-model="item.val"/>
+    </md-input-container>
+
+
+    <section flex ng-if="item.type=='select'">
+      <section ng-repeat="o in item.options" layout="row">
+        <md-checkbox flex="10" ng-model="a.correct" aria-label="correct-{{$index}}">
+        </md-checkbox>
+        <md-input-container flex aria-label="option">
+          <label for="options-{{$index}}" aria-label="label-{{$index}}"> Option</label>
+          <input id="options-{{$index}}" ng-model="o.val" aria-label="option"/>
+        </md-input-container>
+      </section>
+    </section>
+
+  </div>
+
+</section>
