--- a/src/exercise/web/complete/preview.html
+++ b/src/exercise/web/complete/preview.html
@@ -9,3 +9,11 @@
 </span>
 </div>
 -->
+<div >
+  <span  ng-repeat="item in exercise.items">
+    <strong  ng-if="item.type=='txt'">{{item.val}}</strong>
+    <md-select ng-if="item.type=='select'" placeholder="..." ng-model="answer">
+      <md-option ng-repeat="option in item.options" value="{{$index}}">{{option.val}}</md-option>
+    </md-select>
+  </span>
+</div>
