--- a/src/home/web/scripts.html
+++ b/src/home/web/scripts.html
@@ -19,6 +19,9 @@
 <script src="/static/src/exercise/web/question/edit.js"></script>
 <script src="/static/src/exercise/web/question/preview.js"></script>
 
+<script src="/static/src/exercise/web/match/edit.js"></script>
+<script src="/static/src/exercise/web/match/preview.js"></script>
+
 <script src="/static/src/exercise/web/mix/edit.js"></script>
 <script src="/static/src/exercise/web/mix/preview.js"></script>
 
