--- a/src/editor/web/edit/edit.html
+++ b/src/editor/web/edit/edit.html
@@ -63,6 +63,7 @@
       <sl-edit-question exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='question'"></sl-edit-question>
       <sl-edit-mix exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='mix'"></sl-edit-mix>
       <sl-edit-complete exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='complete'"></sl-edit-complete>
+      <sl-edit-match exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='match'"></sl-edit-match>
 
 
     </md-card-content>
@@ -75,6 +76,7 @@
       <sl-preview-question exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='question'"></sl-preview-question>
       <sl-preview-mix exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='mix'"></sl-preview-mix>
       <sl-preview-complete exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='complete'"></sl-preview-complete>
+      <sl-preview-match exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='match'"></sl-preview-match>
     </md-card-content>
   </md-card>
 </section>
