--- a/src/exercise/web/match/edit.html
+++ b/src/exercise/web/match/edit.html
@@ -1,16 +1,25 @@
-<div class="help" translate>Match exercise requires the student to match two parts of a phrase</div>
-<table class="table">
-  <thead>
-  <tr>
-    <td trnaslate>Part 1 </td>
-    <td trnaslate>Part 2 </td>
-  </tr>
-  </thead>
-  <tbody>
-  <tr ng-repeat="item in exercise.items" >
-    <td><input ng-model="item.part1" placeholder="part1"></td>
-    <td><input ng-model="item.part2" placeholder="part2"></td>
-  </tr>
-  </tbody>
-</table>
-<div><button translate ng-click="addItem()">Add</button></div>
+<section layout="row">
+  <md-button class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;"
+             aria-label="Help">
+    <md-icon class="mdi mdi-help-circle">
+    </md-icon>
+    <md-tooltip>
+      Match exercise requires the student to match two parts of a phrase.
+    </md-tooltip>
+  </md-button>
+  <h4 flex>Match Exercise</h4>
+</section>
+
+<section layout="column">
+  <div layout="row" ng-repeat="item in exercise.items">
+    <md-input-container>
+      <label>Part 1</label>
+      <input ng-model="item.part1" >
+    </md-input-container>
+    <md-input-container>
+      <label>Part 2</label>
+      <input ng-model="item.part2" >
+    </md-input-container>
+  </div>
+<md-button translate ng-click="addItem()">Add</md-button>
+</section>
