adding a video player....

--- a/src/editor/web/edit/edit.html
+++ b/src/editor/web/edit/edit.html
@@ -64,6 +64,7 @@
       <sl-edit-mix exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='mix'"></sl-edit-mix>
       <sl-edit-complete exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='complete'"></sl-edit-complete>
       <sl-edit-match exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='match'"></sl-edit-match>
+      <sl-edit-video exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='video'"></sl-edit-video>
 
 
     </md-card-content>
@@ -77,6 +78,7 @@
       <sl-preview-mix exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='mix'"></sl-preview-mix>
       <sl-preview-complete exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='complete'"></sl-preview-complete>
       <sl-preview-match exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='match'"></sl-preview-match>
+      <sl-preview-video exercise="edit.selectedExercise" ng-if="edit.selectedExercise.etype=='video'"></sl-preview-video>
     </md-card-content>
   </md-card>
 </section>
