--- a/src/home/web/scripts.html
+++ b/src/home/web/scripts.html
@@ -6,7 +6,9 @@
 <script src="/static/web_res/bower_components/angular-material/angular-material.min.js"></script>
 
 
+<script src="https://www.youtube.com/iframe_api"></script>
 
+<script src="/static/web_res/bower_components//angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
 
 <script src="/static/src/exercise/web/exercise_module.js"></script>
 
@@ -27,6 +29,9 @@
 
 <script src="/static/src/exercise/web/complete/edit.js"></script>
 <script src="/static/src/exercise/web/complete/preview.js"></script>
+
+<script src="/static/src/exercise/web/video/edit.js"></script>
+<script src="/static/src/exercise/web/video/preview.js"></script>
 
 
 
