--- a/src/exercise/web/video/edit.html
+++ b/src/exercise/web/video/edit.html
@@ -1,4 +1,24 @@
-<div class="help" translate>Add a link to a youtube clip</div>
-<div class="list-inset">
-    <input placeholder="video url" ng-model="exercise.videoUrl" />
-</div>
+<section layout="row">
+  <md-button class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;"
+             aria-label="Help">
+    <md-icon class="mdi mdi-help-circle">
+    </md-icon>
+    <md-tooltip>
+      Add a link to a youtube clip
+    </md-tooltip>
+  </md-button>
+  <h4 flex>Youtube Video</h4>
+</section>
+
+
+<section>
+  <md-input-container>
+    <label>Video URL</label>
+    <input ng-model="exercise.videoUrl" />
+  </md-input-container>
+  <section>
+    <youtube-video player-width="'100%'" video-url="exercise.videoUrl" ></youtube-video>
+  </section>
+
+</section>
+
