--- a/src/exercise/web/video/preview.html
+++ b/src/exercise/web/video/preview.html
@@ -1,3 +1,3 @@
-<youtube-video video-url="exercise.videoUrl"></youtube-video>
+<youtube-video player-width="'100%'" video-url="exercise.videoUrl"></youtube-video>
 <div>{{videoTime}}</div>
 <button ng-click="videoTime = getTime()">getTime</button>
